BSE: BUILD: optimize build by using fine grained dependencies for bse*api.cc

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -308,7 +308,8 @@ bseclientapi.cc: $(srcdir)/../bse/bseapi.idl $(AUXTYPES_PY)
 	$(AM_V_GEN)
 	$(Q) ${AIDACC} -x CxxStub -G macro=BSE_IDL -G clientcc -x $(AUXTYPES_PY) $< -o xgen-$(@F)
 	$(Q) mv xgen-$(@F) $@
-GENERATED += bseclientapi.cc
+bsestartup.cc: bseclientapi.cc
+CLEANFILES += bseclientapi.cc
 bseserverapi.hh: $(srcdir)/bseapi.idl $(AUXTYPES_PY)
 	$(AM_V_GEN)
 	$(Q) ${AIDACC} -x CxxStub -G macro=BSE_IDL -G serverhh -x $(AUXTYPES_PY) \
@@ -319,7 +320,8 @@ bseserverapi.cc: $(srcdir)/bseapi.idl $(AUXTYPES_PY)
 	$(AM_V_GEN)
 	$(Q) ${AIDACC} -x CxxStub -G macro=BSE_IDL -G servercc -x $(AUXTYPES_PY) $< -o xgen-$(@F)
 	$(Q) mv xgen-$(@F) $@
-GENERATED  += bseserverapi.cc
+bseutils.cc: bseserverapi.cc
+CLEANFILES += bseserverapi.cc
 EXTRA_DIST += bseapi.idl
 
 # == GENERATED targets ==
