DOCS: include tagfile from cppreference.com for docu generation

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -59,6 +59,7 @@ DOXYGEN_PROJECT_LINK    = http://beast.testbit.eu/
 DOXYGEN_TAGFILES        = $(strip \
 	imports/tagfile-rapicorn.xml=http://dev.testbit.eu/rapicorn/latest/		\
 	imports/tagfile-susv4.xml=http://pubs.opengroup.org/onlinepubs/9699919799/	\
+	imports/cppreference-doxygen-web.tag.xml=http://en.cppreference.com/w/		\
 )
 build-docs: doxygen-check
 	$(Q) $(MAKE) $(AM_MAKEFLAGS) --no-print-directory doxygen-clean
