BUILD: ship HACKING.md

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ include $(top_srcdir)/Makefile.decl
 
 SUBDIRS = . data sfi bse plugins drivers shell beast-gtk launchers library tools po tests docs
 
+EXTRA_DIST += HACKING.md
 noinst_DATA = HACKING.html
 
 %.html: %.md
