DATA: install image files under $(pkgdatadir)/images

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -12,7 +12,7 @@ public_images = $(strip         \
 	beast-splash.png	\
 )
 images_DATA = ${public_images}
-imagesdir = ${beastimagesdir}
+imagesdir = $(pkgdatadir)/images
 EXTRA_DIST += $(private_images) $(public_images)
 
 # generate image header files
