TESTS: bse: fix IDL build rule not to mess with ../bse/

--- a/tests/bse/Makefile.am
+++ b/tests/bse/Makefile.am
@@ -5,34 +5,6 @@ AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I.
 DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN="\"BSE-TEST\"" # -DG_DISABLE_CONST_RETURNS
 AM_CXXFLAGS += $(SFI_CPPFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 
-SFIDL = $(top_builddir)/sfi/sfidl
-SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
-
-#
-# rules to generate built sources
-#
-# rule for IDL files
-%.genidl.hh: %.idl $(SFIDL)
-	$(SFIDL) --core-cxx $(SFIDL_INC) -I$(top_builddir) $< > $@ || (rm $@ ; exit 1 )
-# bsecxxapi.hh
-#GENERATED_CLEANFILES += bsecxxapi.hh
-#bsecxxapi.hh: $(top_srcdir)/bse/bse.idl $(SFIDL)
-#	cd . \
-#	&& echo -e "#include <sfi/sficxx.hh>\n" > xgen-$(@F) \
-#	&& $(SFIDL) --client-cxx $(SFIDL_INC) --header $(top_srcdir)/bse/bse.idl >> xgen-$(@F) \
-#	&& $(SFIDL) --client-cxx $(SFIDL_INC) --header $(srcdir)/testplugin.idl >> xgen-$(@F) \
-#	&& cp xgen-$(@F) $@ \
-#	&& rm -f xgen-$(@F)
-# bsecxxapi.cc
-#GENERATED_CLEANFILES += bsecxxapi.cc
-#bsecxxapi.cc: bsecxxapi.hh $(top_srcdir)/bse/bse.idl $(SFIDL)
-#	cd . \
-#	&& echo -e "#include \"bsecxxapi.hh\"\n" > xgen-$(@F) \
-#	&& $(SFIDL) --client-cxx $(SFIDL_INC) --source $(top_srcdir)/bse/bse.idl >> xgen-$(@F) \
-#	&& $(SFIDL) --client-cxx $(SFIDL_INC) --source $(srcdir)/testplugin.idl >> xgen-$(@F) \
-#	&& cp xgen-$(@F) $@ \
-#	&& rm -f xgen-$(@F)
-
 #
 # convenience targets for generated source files
 #
@@ -59,16 +31,21 @@ filtertest_SOURCES = filtertest.cc
 filtertest_LDADD   = $(progs_ldadd)
 EXTRA_DIST += empty.ogg
 
-#
+SFIDL = $(top_builddir)/sfi/sfidl
+SFIDL_INC = --nostdinc -I$(top_srcdir) -I$(top_builddir)
+
 # test plugin library
-#
 lib_LTLIBRARIES = testplugin.la
 testplugin_la_SOURCES = testplugin.cc
 testplugin_la_LDFLAGS = $(AM_LDFLAGS) -module -avoid-version
 testplugin_la_LIBADD  = $(top_builddir)/bse/libbse.la $(RAPICORN_LIBS) $(BSE_LIBS) -lm
 EXTRA_DIST += testplugin.idl
+testplugin.genidl.hh: testplugin.idl $(SFIDL)
+	$(SFIDL) --core-cxx $(SFIDL_INC) -I$(top_builddir) $< > xgen-$(@F)
+	mv xgen-$(@F) $@
 GENERATED_CLEANFILES += testplugin.genidl.hh
 $(srcdir)/testplugin.cc: testplugin.genidl.hh
 $(srcdir)/testplugin.cc: testplugin.idl
+
 # prevent libs from being installed
 install-libLTLIBRARIES:
